crates/model/tests/compile_fail/entity_attributes_and_events.stderr
error: expected identifier
  --> tests/compile_fail/entity_attributes_and_events.rs:11:16
   |
11 |             a: (),
   |                ^
